# xcsp3-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
instances/: AllInterval-009.xml  Allergy.xml  Bibd-sc-22-033-12-08-04.xml  CoveringArray-3-06-2-11.xml  Crossword-lex-h0502.xml  Crossword-ogd2008-vg-4-4.xml  Crossword-uk-h0505.xml  Crossword-uk-p01.xml  DiamondFree-007.xml  Dubois-015.xml  GracefulGraph-K02-P04.xml  Hanoi-03.xml  Knapsack-50-200-01.xml  Ortholatin-003.xml  PrizeCollecting-15-3-5-3.xml  Sat-flat200-00-clause.xml  Subisomorphism-g05-g18.xml  Subisomorphism-si2-r001-m200-04.xml  Subisomorphism-si4-r001-m200-05.xml  Tpp-3-3-20-1.xml  TravellingSalesman-100-50-16.xml  TravellingSalesman-25-30-00.xml  TravellingSalesman-50-30-05.xml  Wwtpp-jok-ex02380.xml  my-example.xml  radi_X2.xml
src/: lib.rs  xcsp3.rs  xcsp3constants.rs  xcsp3constraint.rs  xcsp3domain.rs  xcsp3error.rs  xcsp3skeleton.rs  xcsp3tree.rs  xcsp3treenode.rs  xcsp3utils.rs  xcsp3variable.rs
src/constraints/: mod.rs  xall_different.rs  xall_different_except.rs  xall_equal.rs  xblocks.rs  xcardinality.rs  xchannel.rs  xconstraint_set.rs  xconstraint_trait.rs  xconstraint_type.rs  xcount.rs  xcumulative.rs  xelement.rs  xextension.rs  xgroup.rs  xinstantiation.rs  xint_val_var.rs  xintension.rs  xmax_min.rs  xmdd.rs  xn_values.rs  xno_overlap.rs  xno_overlap_k_dimensional.rs  xordered.rs  xregular.rs  xrelational_operand.rs  xrelational_operator.rs  xslide.rs  xstretch.rs  xsum.rs
src/data_structs/: bitset.rs  expression_tree.rs  mod.rs  xint_val_var.rs  xrelational_operand.rs
src/errors/: mod.rs  parse_constraint_error.rs  parse_domain_error.rs  parse_objectives_error.rs  parse_variable_error.rs  xcsp3error.rs
src/objectives/: mod.rs  readme.md  xobjective_element.rs  xobjective_expression.rs  xobjective_target.rs  xobjectives_set.rs  xobjectives_type.rs
src/utils/: bitset.rs  expression_tree.rs  mod.rs  readme.md  time_interval.rs  utils.rs  utils_functions.rs  xcsp3utils.rs
src/variables/: mod.rs  xdomain.rs  xvariable_array.rs  xvariable_int.rs  xvariable_set.rs  xvariable_trait.rs  xvariable_tree.rs  xvariable_type.rs
src/xcsp_xml/: constraint.rs  constraint_block.rs  constraint_group.rs  constraint_type.rs  mod.rs  objective.rs  variable.rs  (+5 more)
tests/: main.rs  test_utils.rs  test_xcsp3domain.rs  test_xcsp3skeleton.rs  test_xcsp3variable.rs
