[package]
name = "xcsp3-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [
    "constraint",
    "satisfiability",
    "csp",
    "xcsp3",
    "combinatorial",
    "parser",
]
description = "Rust bindings for the FLTK GUI library"
readme = "README.md"
categories = ["gui"]
license = "MIT"
repository = "https://github.com/luhanzhen/xcsp3-rust"

[dependencies]
quick-xml = {version = "0.29.0", features = ["serialize"]}
serde = {version = "1.0.166", features = ["serde_derive"]}
walkdir = {version = "2.3.3"}
bitmaps = "3.2.0"
#glob = "0.3.1"

[[bin]]
name = "main"
doc = false
path = "tests/main.rs"


[lib]
name = "xcsp3_rust"
path = "src/lib.rs"
